testcases/negative/circular_reference.vcf
BEGIN:VCARD
VERSION:4.0
FN:Group A
KIND:group
MEMBER:urn:uuid:12345678-1234-1234-1234-123456789012
END:VCARD
